deploy/api-producer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-producer
  labels:
    app: api-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-producer
  template:
    metadata:
      labels:
        app: api-producer
    spec:
      containers:
      - name: api-producer
        image: kalaber/kafka:api-producer
        ports:
        - containerPort: 8000
