deploy/api-producer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-producer
spec:
  selector:
    app: api-producer
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
